--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,8 @@
 @import "animations";
 $main-font: 'Heebo', sans-serif;
 $second-font: 'Plus Jakarta Sans', sans-serif;
+$third-font: 'Assistant', sans-serif;
+$fourth-font: 'Segoe UI', sans-serif;
 $size: 14px;
 $dark: #09244F;
 $blue: #47A2FF;
